--- a/images.qrc
+++ b/images.qrc
@@ -5,6 +5,6 @@
         <file>images/led_red_off.bmp</file>
         <file>images/led_red_on.bmp</file>
         <file>images/light_off.bmp</file>
-        <file>images/ligth_on.bmp</file>
+        <file>images/light_on.bmp</file>
     </qresource>
 </RCC>
